--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,49 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: 欢迎访问 Scraping Cloud
+description: 'Bright Data 提供一系列代理和抓取基础架构解决方案，满足各种使用场景的需求，您可专注进行数据采集，其余工作交由我们的技术人员处理即可。'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<div align="center">
+<h2 align="center"> 您想了解什么内容？ </h2>
+</div>
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
-
+<Card>
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Use 代理网络"
+    href="/proxy-networks"
+    icon="globe"
   >
-    Get your docs set up locally for easy development
+    通过广泛的 IP 池、各种地理位置、弹性 API 等访问网络
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="自动抓取"
+    href="/scraping-automation"
+    icon="bolt"
   >
-    Preview your changes before you push to make sure they're perfect
+    使用 Bright Data 验证码解算器、浏览器、指纹识别技术等提高抓取成功率
+  </Card>
+  <Card
+    title="获取数据"
+    href="/datasets"
+    icon="table"
+  >
+    使用预制或定制的数据集查询和分析所需数据
+  </Card>
+  <Card
+    title="管理账户"
+    href="/general/"
+    icon="wrench"
+  >
+    自定义和自动化您的 Bright Data 账户操作
   </Card>
 </CardGroup>
+  <Card
+    title="网络状态"
+    icon='circle-check'
+    href="https://brightdata.com/network-status"
+  >
+    查看当前网络状态。
+  </Card>
+</Card>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
