Add: Proxy Network > Residential

--- a/proxy-networks/data-center/faqs.mdx
+++ b/proxy-networks/data-center/faqs.mdx
@@ -358,7 +358,7 @@ curl --proxy-user brd-customer-<customer_id>-zone-<zone_name>-os-android:<zone_p
 ```sh 
 curl "https://lumtest.com/myip.json" --verbose --proxy brd.superproxy.io:33335 --proxy-user brd-customer-<customer_id>-zone-<zone_name>:<zone_password>
 ```
-2. **Locate** the x-brd-ip response header and copy its value
+2. 找到 x-brd-ip 响应标头并复制其值
 
 ![x-brd-ip.png](/images/proxy-networks/faqs/x-brd-ip.png)
 
