Add: Proxy Network > Proxy

--- a/proxy-networks/residential/quickstart.mdx
+++ b/proxy-networks/residential/quickstart.mdx
@@ -11,7 +11,7 @@ sidebarTitle: 快速入门
 
 <Steps>
 
-  <Step title= {<a href="https://brightdata.com/cp/start">Sign in</a>}>
+  <Step title= {<a href="https://brightdata.com/cp/start">登录</a>}>
   </Step>
 
   <Step title="导航到“我的区域”">
