Update: missing english to chinese

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,7 +10,7 @@ description: 'Bright Data 提供一系列代理和抓取基础架构解决方案
 <Card>
 <CardGroup cols={2}>
   <Card
-    title="Use 代理网络"
+    title="使用代理网络"
     href="/proxy-networks"
     icon="globe"
   >
