Update: English Text -> Chinese

--- a/api-reference/marketplace-dataset-api/request-a-collection.mdx
+++ b/api-reference/marketplace-dataset-api/request-a-collection.mdx
@@ -2,7 +2,7 @@
 title: 请求收集
 ---
 
-**Endpoint:** `POST` `/datasets/request_collection`
+**端点:** `POST` `/datasets/request_collection`
 
 第一步是确定要收集哪些数据。 在指定新数据集收集参数（如定义数据集 ID 和类型）或发现新数据或指定 URL 收集时使用。
 
