Update: English Text

--- a/api-reference/proxy-manager/ban_ips_array_.mdx
+++ b/api-reference/proxy-manager/ban_ips_array_.mdx
@@ -1,7 +1,7 @@
 ---
 title: 封禁多个 IP（阵列）
 ---
-**API endpoint:** `POST` `/api/proxies/{PORT}/banips`
+**API 端点:** `POST` `/api/proxies/{PORT}/banips`
 
 ## 路径参数
 <ParamField body="PORT" type="string" required>
