Update: English text

--- a/api-reference/proxy-manager/get_proxy_port_status.mdx
+++ b/api-reference/proxy-manager/get_proxy_port_status.mdx
@@ -4,7 +4,7 @@ title: 获取代理端口状态
 
 **API 端点:** `GET` `/api/proxy_status/{端口}`
 
-<ParamField path="PORT" type="PORT">
+<ParamField path="PORT" type="string">
 现有代理端口号
 </ParamField>
 
