Update: English text

--- a/general/account/billing-and-pricing/bright-rewards-program.mdx
+++ b/general/account/billing-and-pricing/bright-rewards-program.mdx
@@ -10,7 +10,7 @@ Bright 奖励计划会员必须具备以下条件：
 1.	已订阅我们的一款产品
 2.	在过去 3 个月中积极使用我们的服务
 
-## Earn & redeem points
+## 赚取和兑换积分
 成为符合条件的客户后，您即可根据所选计划开始赚取 Bright 积分。 根据奖励计划的条款和条件，您可以使用 Bright 积分购买 Bright Data 的服务。 您获得的 Bright 积分将显示在您的 CP 账单页面上。
 
 <Frame>
