--- a/general/policy/Privacy_Policy.mdx
+++ b/general/policy/Privacy_Policy.mdx
@@ -1,5 +1,5 @@
-<sub>_Last Updated December 7, 2021_</sub><br/>
-<sub>_Last Reviewed October 31, 2022_</sub>
+<sub>_上次更新日期：2021年12月7日_</sub><br/>
+<sub>_上次审核日期：2022年10月31日_</sub>
 
 在Bright Data，我们从事的是数据业务，正因为如此，我们非常重视数据隐私。我们的客户委托我们提供干浄、合规和符合道德标准的数据以协助其业务，同时保持最高的隐私标准。 我们的产品和服务遍及世界各地，因此，我们持续监控不断变化的全球隐私环境，并进行相应调整，以确保完全遵守隐私法律（包括欧盟的GDPR和加利福尼亚州的CCPA）。如果您是加利福尼亚州居民，请参阅本政策末尾的CCPA隐私声明。
 
