Update: English Text

--- a/scraping-automation/web-scraper-ide/features.mdx
+++ b/scraping-automation/web-scraper-ide/features.mdx
@@ -76,7 +76,7 @@ C. [定时启动抓取工具](/scraping-automation/web-scraper-ide/initiate-coll
 ![](/images/scraping-automation/web-scraping-ide/features/statistics.png)
 “统计信息”页面会提供一些基本信息，以显示数据采集工作的成功情况。 以下是统计信息表中包含的各种术语列表：
 
-**统计信息 actions menu**
+**统计信息操作菜单**
 ![](/images/scraping-automation/web-scraping-ide/features/statistics-action-menu.png)
 
 * **三个点**
