Update: Initiate a collection

--- a/api-reference/marketplace-dataset-api/initiating-a-collection.mdx
+++ b/api-reference/marketplace-dataset-api/initiating-a-collection.mdx
@@ -3,9 +3,9 @@ title: 启动收集（新数据集）
 sidebarTitle: 启动收集
 ---
 
-**Endpoint:** `POST` `/datasets/initiate_collection`
+**端点:** `POST` `/datasets/initiate_collection`
 
-## `POST` body
+## `POST` 正文：
 <ParamField query="request_id" type="string" required>
 您正在查询的收集请求的唯一标识符。
 </ParamField>
