Update a few files

--- a/api-reference/marketplace-dataset-api/initiating-an-existing-dataset.mdx
+++ b/api-reference/marketplace-dataset-api/initiating-an-existing-dataset.mdx
@@ -4,7 +4,7 @@ title: 启动现有数据集
 
 **端点:** `POST` `/datasets/request_collection`
 
-## Query Parameters
+## 查询参数
 <ParamField query="dataset_id" type="string" required>
 Dataset ID
 </ParamField>
@@ -21,7 +21,7 @@ View
 </ParamField>
 
 
-## `POST` body
+## `POST` 正文：
 <ParamField body="inputs" type="array" required>
 Array - json
 ```json
