--- a/datasets/data-validation/data-validation-for-customers.mdx
+++ b/datasets/data-validation/data-validation-for-customers.mdx
@@ -1,8 +1,7 @@
 ---
-title: Data validation for Customers
-sidebarTitle: For Customers
+title: 客户数据验证
 ---
-## Overview
+## 概述
 Bright Data 的自动数据集创建平台包括数据集交付之前的验证和批准阶段。该平台便于错误处理、验证检查和客户定制, 确保数据的准确性和可靠性。这些验证检查对于节省时间、减少数据错误，以及将数据质量保持在所需水平至关重要。
 ![flow-chart.png](/images/datasets/data-validation/data-validation-for-customers/flow-chart.png)
 
@@ -22,7 +21,6 @@ The user can then decide to:
 1.  Approve the snapshot.
 2.  Approve the snapshot for this time frame only.
 3.  Reject the snapshot, and we will fix the scraper accordingly.
-
 </Tab>
 </Tabs>
 
