--- a/datasets/data-validation/data-validation-for-partners.mdx
+++ b/datasets/data-validation/data-validation-for-partners.mdx
@@ -88,7 +88,7 @@ The customer can then decide (per fail test or as a batch):
 </Frame>
 </Accordion>
 
-<Accordion title="“Show related records” and “View & Edit code”">
+<Accordion title="“显示相关记录”和“查看和编辑代码”">
 如果测试失败，请点击“显示相关记录”以查看记录示例，然后点击“查看并编辑代码”进入 IDE 并开始修复问题
 
 ![view-edit-code.png](/images/datasets/data-validation/data-validation-for-partners/view-edit-code.png)
