--- a/cn/general/account/billing-and-pricing/faqs.mdx
+++ b/cn/general/account/billing-and-pricing/faqs.mdx
@@ -56,7 +56,7 @@ Everyone who signs up to Bright Data automatically gets a free trial to.
 
 The free trial can be used for all Bright Data products.
 
-For additional details, see [here](https://docs.brightdata.com/general/faqs#what-is-playground-mode).
+For additional details, see [here](https://docs.brightdata.com/cn/general/faqs#what-is-playground-mode).
 
 <Info> 以协助进行试用配置。</Info>
 </Accordion>
