--- a/cn/general/faqs.mdx
+++ b/cn/general/faqs.mdx
@@ -33,7 +33,7 @@ Remember, each user must set their own password. If you have other users on your
 ![specific-zone-statics.gif](/images/general/faqs/specific-zone-statics.gif)
 </Tab>
 <Tab title="通过 API">
-+ Please visit [this page](/api-reference/) to see all available API endpoints (in multiple languages) and example responses related to viewing statistics.
++ Please visit [this page](/cn/api-reference/) to see all available API endpoints (in multiple languages) and example responses related to viewing statistics.
 </Tab>
 </Tabs>
 </Accordion>
