--- a/cn/proxy-networks/errorCatalog.mdx
+++ b/cn/proxy-networks/errorCatalog.mdx
@@ -86,9 +86,9 @@ If you get HTTP error 407, this implies there is an error in authentication. Thi
 |----------------------|----------------------|--------------------
 | `client_10070` | 没有协议 | 原始请求中缺少协议。 请添加HTTP或HTTPS，然后重试。 | 
 | `client_10080` | 没有目标主机 | 没有目标主机。 目标主机缺失或不正确。 请检查您的请求参数，然后重试
-| `client_10090` | 您正在尝试将Scraping Browser区域用作常规代理 | 您正在尝试将Scraping Browser区域用作常规代理。 此区域应通过浏览器访问。详见 请参阅https://docs.brightdata.com/scraping-automation/scraping-browser/introduction，了解如何访问您的scraping browser区域。 | 
+| `client_10090` | 您正在尝试将Scraping Browser区域用作常规代理 | 您正在尝试将Scraping Browser区域用作常规代理。 此区域应通过浏览器访问。详见 请参阅https://docs.brightdata.com/cn/scraping-automation/scraping-browser/introduction，了解如何访问您的scraping browser区域。 | 
 | `policy_20010` | 协议错误 | 您使用的协议不受支持。 Bright data supports HTTP, HTTPS & SOCKS5 upon special approval. 请纠正您的协议，然后重试 | 
-| `policy_20020` | 端口错误 | 使用了错误的端口。 我们支持的端口：https://docs.brightdata.com/proxy-networks/faqs#how-to-see-supported-ports-and-protocols
+| `policy_20020` | 端口错误 | 使用了错误的端口。 我们支持的端口：https://docs.brightdata.com/cn/proxy-networks/faqs#how-to-see-supported-ports-and-protocols
 | `policy_20130` | 住宅 Failed (bad_endpoint) - Requested site is not available for immediate residential (no KYC) access mode due to the fact that %HTTP_METHOD% requests are not allowed. To get full residential access for targeting this site, Fill in the KYC form: https://brightdata.com/cp/kyc | 住宅 Failed (bad_endpoint) - Requested site is not available for immediate residential (no KYC) access mode due to the fact that %HTTP_METHOD% requests are not allowed. To get full residential access for targeting this site, Fill in the KYC form: https://brightdata.com/cp/kyc |
 | `policy_20140` | 住宅 Failed (bad_endpoint) - Requested site is not available for immediate residential (no KYC) access mode in accordance with robots.txt. To get full residential access for targeting this site, Fill in the KYC form: https://brightdata.com/cp/kyc | 住宅 Failed (bad_endpoint) - Requested site is not available for immediate residential (no KYC) access mode in accordance with robots.txt. To get full residential access for targeting this site, Fill in the KYC form: https://brightdata.com/cp/kyc |
 
