--- a/cn/proxy-networks/isp/configure-your-proxy.mdx
+++ b/cn/proxy-networks/isp/configure-your-proxy.mdx
@@ -64,7 +64,7 @@ If you select multiple countries, we assign proxies distributed  evenly across t
 ### Shared proxy
 In 互联网服务提供商 (互联网服务提供商 (ISP)) Shared proxies, you have access to 20,000 proxies around the globe. To target specific country, use the flag -country in the proxy user name parameter with an ISO-3166 country code. 
 
-[FAQ: Where can I see the list of country codes?](https://docs.brightdata.com/general/faqs#where-can-i-see-the-list-of-country-codes)
+[FAQ: Where can I see the list of country codes?](https://docs.brightdata.com/cn/general/faqs#where-can-i-see-the-list-of-country-codes)
 
 ---
 
