--- a/cn/proxy-networks/proxy-manager/faqs.mdx
+++ b/cn/proxy-networks/proxy-manager/faqs.mdx
@@ -257,7 +257,7 @@ curl -v "http://lumtest.com/myip.json" --socks5 127.0.0.1:24000 -H "Proxy-Author
 从API切换到Proxy Manager的指南：
 
 1. 在此处安装Proxy Manager: https://github.com/luminati-io/luminati-proxy#installation/
-2. <Tooltip tip="Port 33335 replacing port 22225 deprecated on Sep 2026, click to read more">[`33335`](https://docs.brightdata.com/general/faqs#which-port-shall-i-use-22225-or-33335) </Tooltip>
+2. <Tooltip tip="Port 33335 replacing port 22225 deprecated on Sep 2026, click to read more">[`33335`](https://docs.brightdata.com/cn/general/faqs#which-port-shall-i-use-22225-or-33335) </Tooltip>
 3. 通过Proxy Manager控制面板配置自定义代理和区域的设置。 无需在请求中发送用户参数（brd-customer-customer_name-zone-zone_name…），因为所有必要的数据都包含在手动代理配置中。
 </Accordion>
 <Accordion title="如何模拟真人用户？">
