--- a/cn/api-reference/unlocker/sending_first_request.mdx
+++ b/cn/api-reference/unlocker/sending_first_request.mdx
@@ -13,7 +13,7 @@ curl "https://geo.brdtest.com/welcome.txt" --proxy brd.superproxy.io:33335 --pro
 |                                                                                                                                                                                                |                                                                                                                         |
 | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
 | `brd.superproxy.io`                                                                                                                                                                            | 我们的负载均衡器地址，它将为您的请求找到最快的超级代理                                    |
-| <Tooltip tip="Port 33335 replacing port 22225 deprecated on Sep 2026, click to read more">[`33335`](https://docs.brightdata.com/general/faqs#which-port-shall-i-use-22225-or-33335) </Tooltip> | 我们的超级代理的基础设施端口，用于接收您的请求                                          |
+| <Tooltip tip="Port 33335 replacing port 22225 deprecated on Sep 2026, click to read more">[`33335`](https://docs.brightdata.com/cn/general/faqs#which-port-shall-i-use-22225-or-33335) </Tooltip> | 我们的超级代理的基础设施端口，用于接收您的请求                                          |
 | `-user brd-customer-<customer_id>-zone-<zone_name>`                                                                                                                                            | 用户名验证。 它以最基本的形式定义了您的用户名以及您将在请求中使用哪个区域。  |
 | `<zone_password>`                                                                                                                                                                              | 区域密码。 所有区域都有用于身份验证的密码                                                |
 | https://geo.brdtest.com/welcome.txt                                                                                                                                                            | 替换为您的目标域名。 这只是一个用于测试的服务器占位符。               |
