--- a/cn/proxy-networks/data-center/configure-your-proxy.mdx
+++ b/cn/proxy-networks/data-center/configure-your-proxy.mdx
@@ -69,7 +69,7 @@ If you select multiple countries, we assign proxies distributed  evenly across t
 ### Shared proxy
 In Datacenter Shared proxies, you have access to 40,000 proxies around the globe. To target specific country, use the flag -country in the proxy user name parameter with an ISO-3166 country code. 
 
-[FAQ: Where can I see the list of country codes?](https://docs.brightdata.com/general/faqs#where-can-i-see-the-list-of-country-codes)
+[FAQ: Where can I see the list of country codes?](https://docs.brightdata.com/cn/general/faqs#where-can-i-see-the-list-of-country-codes)
 
 ---
 
